@@ -8,9 +8,9 @@ dependencies[] = field
 
 configure = admin/config/content/fences
 
-; Information added by drupal.org packaging script on 2012-04-25
-version = "7.x-1.0"
+; Information added by Drupal.org packaging script on 2015-09-24
+version = "7.x-1.2"
 core = "7.x"
 project = "fences"
-datestamp = "1335373578"
+datestamp = "1443071044"
 
